fix bug with spinner out of bounds

--- a/components/servers/GuildList.module.css
+++ b/components/servers/GuildList.module.css
@@ -15,6 +15,7 @@
 .container {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 2rem;
     font-size: 18px;
 }
